--- a/css-test/style.css
+++ b/css-test/style.css
@@ -50,10 +50,9 @@ body{
 
 .content__img{
     position:absolute;
-    top:0;
+    bottom:110px;
     right:0;
     width: 50%;
-    transform:translateY(20%);
 }
 
 .content__box{
